force-app/main/default/objects/hed__Application__c/fields/French_skills__c.field-meta.xml
<CustomField>
    <fullName>French_skills__c</fullName>
    <label>French skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Fluent</fullName>
            </value>
            <value>
                <fullName>Native language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>