force-app/main/default/objects/hed__Application__c/fields/hed__Application_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Application_Decision_Date__c</fullName>
    <description>The date when the institution decides whether to accept the applicant.</description>
    <inlineHelpText>La date à laquelle l&apos;établissement décide d&apos;accepter ou non le demandeur.</inlineHelpText>
    <label>Application Decision Date</label>
    <type>Date</type>
</CustomField>