force-app/main/default/objects/hed__Application__c/fields/hed__Application_Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Application_Status__c</fullName>
    <description>The status of the application process.</description>
    <inlineHelpText>Le statut du processus de demande.</inlineHelpText>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Admit</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>