force-app/main/default/objects/hed__Application__c/fields/hed__Applying_To__c.field-meta.xml
<CustomField>
    <fullName>hed__Applying_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The academic program or major the applicant is applying to.</description>
    <inlineHelpText>Le type de programme académique ou mémoire auquel le demandeur postule.</inlineHelpText>
    <label>Applying To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>