force-app/main/default/objects/hed__Application__c/fields/hed__Initial_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Initial_Creation_Date__c</fullName>
    <description>The date the application was initially created by the applicant.</description>
    <inlineHelpText>La date à laquelle la demande a été initialement créée par le demandeur.</inlineHelpText>
    <label>Initial Creation Date</label>
    <type>Date</type>
</CustomField>