force-app/main/default/objects/hed__Application__c/fields/hed__Preparer__c.field-meta.xml
<CustomField>
    <fullName>hed__Preparer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact preparing the application, often a guardian.</description>
    <inlineHelpText>Le contact qui prépare la demande, par exemple un tuteur ou un assistant qui aide une personne ayant des besoins particuliers.</inlineHelpText>
    <label>Preparer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Preparer)</relationshipLabel>
    <relationshipName>Applications_Preparer</relationshipName>
    <type>Lookup</type>
</CustomField>