force-app/main/default/objects/hed__Application__c/fields/Mobilisation_CPF__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_CPF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Comptez-vous mobiliser votre CPF dans le financement de votre formation?</inlineHelpText>
    <label>Mobilisation CPF</label>
    <type>Checkbox</type>
</CustomField>