force-app/main/default/objects/hed__Application__c/fields/SIS_Amenagement_concours_necessaire__c.field-meta.xml
<CustomField>
    <fullName>SIS_Amenagement_concours_necessaire__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If yes, please contact the Disability Unit at handicap@em-lyon.com to consider your specific needs and provide, when needed, specific arrangements for your application.</inlineHelpText>
    <label>Aménagement concours nécessaire</label>
    <type>Checkbox</type>
</CustomField>