force-app/main/default/objects/hed__Application__c/fields/SIS_Avez_vous_deja_candidate_au_PGE__c.field-meta.xml
<CustomField>
    <fullName>SIS_Avez_vous_deja_candidate_au_PGE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avez-vous déjà candidaté au PGE ?</label>
    <type>Checkbox</type>
</CustomField>