force-app/main/default/objects/hed__Application__c/fields/SIS_Bourse_CROUS__c.field-meta.xml
<CustomField>
    <fullName>SIS_Bourse_CROUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bourse CROUS</label>
    <type>Checkbox</type>
</CustomField>