force-app/main/default/objects/hed__Application__c/fields/SIS_Bourse_individuelle_octroy_e__c.field-meta.xml
<CustomField>
    <fullName>SIS_Bourse_individuelle_octroy_e__c</fullName>
    <label>Bourse individuelle octroyée</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>