force-app/main/default/objects/hed__Application__c/fields/SIS_Campus__c.field-meta.xml
<CustomField>
    <fullName>SIS_Campus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campus</label>
    <referenceTo>hed__Facility__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>