force-app/main/default/objects/hed__Application__c/fields/SIS_Candidature_hors_EM_Lyon__c.field-meta.xml
<CustomField>
    <fullName>SIS_Candidature_hors_EM_Lyon__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Avez-vous candidaté à un programme hors emlyon ?</inlineHelpText>
    <label>Candidature hors emlyon</label>
    <type>Checkbox</type>
</CustomField>