force-app/main/default/objects/hed__Application__c/fields/SIS_Compte_Professionnel_Formation_CPF__c.field-meta.xml
<CustomField>
    <fullName>SIS_Compte_Professionnel_Formation_CPF__c</fullName>
    <label>Compte Professionnel de Formation (CPF)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>