force-app/main/default/objects/hed__Application__c/fields/SIS_Degree_sought__c.field-meta.xml
<CustomField>
    <fullName>SIS_Degree_sought__c</fullName>
    <label>Degree sought</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAC+3</fullName>
            </value>
            <value>
                <fullName>BAC+4</fullName>
            </value>
            <value>
                <fullName>BAC+5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>