force-app/main/default/objects/hed__Application__c/fields/SIS_Demande_de_bourse_individuelle__c.field-meta.xml
<CustomField>
    <fullName>SIS_Demande_de_bourse_individuelle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande de bourse individuelle</label>
    <type>Checkbox</type>
</CustomField>