force-app/main/default/objects/hed__Application__c/fields/SIS_Financement_entreprise__c.field-meta.xml
<CustomField>
    <fullName>SIS_Financement_entreprise__c</fullName>
    <label>Financement entreprise</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>