force-app/main/default/objects/hed__Application__c/fields/SIS_Intended_specialisation__c.field-meta.xml
<CustomField>
    <fullName>SIS_Intended_specialisation__c</fullName>
    <label>Intended specialisation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SIS_Programme_auquel_vous_postulez__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Strategic Management</fullName>
            </value>
            <value>
                <fullName>Organization Theory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>