force-app/main/default/objects/hed__Application__c/fields/SIS_Lien_vers_le_site_du_CPF__c.field-meta.xml
<CustomField>
    <fullName>SIS_Lien_vers_le_site_du_CPF__c</fullName>
    <label>Lien vers le site du CPF</label>
    <type>Url</type>
</CustomField>