force-app/main/default/objects/hed__Application__c/fields/SIS_montant_CPF_mobilise_en_TTC__c.field-meta.xml
<CustomField>
    <fullName>SIS_montant_CPF_mobilise_en_TTC__c</fullName>
    <label>Quel est le montant CPF mobilisé en €TTC</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>