force-app/main/default/objects/hed__Application__c/fields/SIS_Motivation_question_1__c.field-meta.xml
<CustomField>
    <fullName>SIS_Motivation_question_1__c</fullName>
    <defaultValue>&quot;What is your main motivation in joining the Accélérateur program?&quot;</defaultValue>
    <label>Motivation question 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>