force-app/main/default/objects/hed__Application__c/fields/SIS_Plan_de_financement__c.field-meta.xml
<CustomField>
    <fullName>SIS_Plan_de_financement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Votre plan de financement est il déjà défini ?</inlineHelpText>
    <label>Plan de financement</label>
    <type>Checkbox</type>
</CustomField>