force-app/main/default/objects/hed__Application__c/fields/SIS_Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>