force-app/main/default/objects/hed__Application__c/fields/SIS_Programme_auquel_vous_postulez__c.field-meta.xml
<CustomField>
    <fullName>SIS_Programme_auquel_vous_postulez__c</fullName>
    <label>Programme auquel vous postulez</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Certificat onilne Pilotage de la performance et datas</fullName>
            </value>
            <value>
                <fullName>Certificat online Conduite du changement et intelligence collective</fullName>
            </value>
            <value>
                <fullName>Certificat online Management agile et responsable</fullName>
            </value>
            <value>
                <fullName>Certificat online Marketing digital</fullName>
            </value>
            <value>
                <fullName>Certificat online Pilotage du capital humain</fullName>
            </value>
            <value>
                <fullName>Certificat online Stratégie d’entreprise et disruptions</fullName>
            </value>
            <value>
                <fullName>Certificat online Transformation digitale</fullName>
            </value>
            <value>
                <fullName>Démarche Marketing</fullName>
            </value>
            <value>
                <fullName>Diriger Une Activité</fullName>
            </value>
            <value>
                <fullName>Executive Master Management Général</fullName>
            </value>
            <value>
                <fullName>Executive Master Management Général Online</fullName>
            </value>
            <value>
                <fullName>Executive MBA</fullName>
            </value>
            <value>
                <fullName>Finance pour Non Financier</fullName>
            </value>
            <value>
                <fullName>Global BBA</fullName>
            </value>
            <value>
                <fullName>Global DBA - Asia Track</fullName>
            </value>
            <value>
                <fullName>Global DBA - with Durham University</fullName>
            </value>
            <value>
                <fullName>International MBA</fullName>
            </value>
            <value>
                <fullName>Intrapreneur : Acteurs de l’Innovation</fullName>
            </value>
            <value>
                <fullName>Management Agile et Responsable</fullName>
            </value>
            <value>
                <fullName>Marketing Digital</fullName>
            </value>
            <value>
                <fullName>Mastère Spécialisé Entrepreneuriat &amp; Management de l&apos;Innovation</fullName>
            </value>
            <value>
                <fullName>Mastère Spécialisé Juriste Manager International Full-time</fullName>
            </value>
            <value>
                <fullName>Mastère Spécialisé Juriste Manager International Part-Time</fullName>
            </value>
            <value>
                <fullName>Mastère Spécialisé Management de la Transition Énergétique</fullName>
            </value>
            <value>
                <fullName>Mastère Spécialisé Management des Entreprises du Vivant &amp; de l&apos;Agroalimentaire</fullName>
            </value>
            <value>
                <fullName>Mastère Spécialisé Stratégie &amp; Développement d&apos;Affaires Internationales</fullName>
            </value>
            <value>
                <fullName>Mastère Spécialisé Transformation Digitale, Marketing &amp; Stratégie</fullName>
            </value>
            <value>
                <fullName>MSc in Cybersecurity &amp; Defense Management</fullName>
            </value>
            <value>
                <fullName>MSc in Data Science &amp; Artificial Intelligence Strategy</fullName>
            </value>
            <value>
                <fullName>MSc in Digital Marketing &amp; Data Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>