force-app/main/default/objects/hed__Application__c/fields/SIS_Programmes_hors_emlyon_pr_sent_s__c.field-meta.xml
<CustomField>
    <fullName>SIS_Programmes_hors_emlyon_pr_sent_s__c</fullName>
    <label>Programmes hors emlyon présentés</label>
    <type>TextArea</type>
</CustomField>