force-app/main/default/objects/hed__Application__c/fields/SIS_Temporarily_or_permanently_disabled__c.field-meta.xml
<CustomField>
    <fullName>SIS_Temporarily_or_permanently_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you temporarily or permanently disabled, or with a disabling medical condition?</inlineHelpText>
    <label>Temporarily or permanently disabled ?</label>
    <type>Checkbox</type>
</CustomField>