force-app/main/default/objects/hed__Application__c/fields/SIS_Type_damenagement_concours_necessair__c.field-meta.xml
<CustomField>
    <fullName>SIS_Type_damenagement_concours_necessair__c</fullName>
    <label>Type d&apos;aménagement du concours nécessair</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/3 temps</fullName>
            </value>
            <value>
                <fullName>Secrétaire</fullName>
            </value>
            <value>
                <fullName>Autre libre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>