force-app/main/default/objects/hed__Application__c/fields/SIS_Validation_sur_l_honneur__c.field-meta.xml
<CustomField>
    <fullName>SIS_Validation_sur_l_honneur__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Validation sur l&apos;honneur de l&apos;exactitude des éléments de la candidature</inlineHelpText>
    <label>Validation sur l&apos;honneur</label>
    <type>Checkbox</type>
</CustomField>