force-app/main/default/objects/hed__Application__c/recordTypes/Portail_candidat.recordType-meta.xml
<RecordType>
    <fullName>Portail_candidat</fullName>
    <active>true</active>
    <label>Portail candidat</label>
</RecordType>