force-app/main/default/objects/hed__Application__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>NAME</columns>
    <columns>hed__Applying_To__c</columns>
    <columns>SIS_Program__c</columns>
    <columns>SIS_Campus__c</columns>
    <columns>SIS_Program_Plan__c</columns>
    <columns>hed__Applicant__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>